# pibot

./: .gitmodules  CMakeLists.txt  README.md  model_cart_pendulum.py  model_run_sim.py  notes.md  setup_can.sh  test_can.py  test_i2c.py  test_i2c_bno055.py  test_moteus_py.py  test_simple_pd_balancer.py
config/: conf.yaml
include/: Config.h  Controller.h  Imu.h  Joystick.h  motor.h
scripts/: log_viewer.py  setdown_can.sh  setup_can.sh  setup_vcan.sh
src/: Config.cpp  Controller.cpp  Imu.cpp
test/: CMakeLists.txt  test_asio_can.cpp  test_asio_can_moteus.cpp  test_bno55.cpp  test_bno55_asio.cpp  test_imu.cpp  test_joystick_asio.cpp  test_moteus_query.cpp  test_robot.cpp  test_yaml_mirror.py
